Eclipse_Titan_Core/titan.core/conformance_test/core_language_tests/positive_tests/09_test_configurations/0901_communication_ports/NegSyn_0901_Communication_ports_001.ttcn
/******************************************************************************
 * Copyright (C) 2017 ETSI  All Rights Reserved.
 *
 * Adrien Kirjak
 *
 ** @version  0.0.1
 ** @purpose  1:9.1, Verify that a two TSI port cannot be connected
 ** @verdict  pass reject, noexecution
 ***************************************************/

/*NOTE: see Figure 7(f): Two TSI port cannot be connected
 * */

module NegSyn_0901_Communication_ports_001 {
  
    type port P message {
        inout integer
    }

    type component GeneralComp
    {
        port P p1, p2;
    }
	
        type component General_System_Comp
    {
        port P p_system_1, p_system_2;
    }
    
    testcase TC_NegSyn_0901_Communication_ports_001() runs on GeneralComp system General_System_Comp {
		
        connect(system:p_system_1, system:p_system_2); // error: p_system_1 and p_system_2 cannot be connected
		
        setverdict(pass);
    }
	
    control{
        execute(TC_NegSyn_0901_Communication_ports_001());
    }
}

